[package]
name = "criterion-cpu-time"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { git = "https://github.com/YangKeao/criterion.rs.git", branch = "yangkeao/reduce_clap_version", features=['real_blackbox'] }
libc = "0.2"